--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 
 body{
     font-family:'Poppins', sans-serif; 
-background-color:#f9f5db;   
+background-color:#ececec; 
+padding: 1%;
+
 }
 
 h1{
@@ -11,8 +13,42 @@ h2{
     font-size: 40px;
 }
 p{
-    color: dimgray;
+    color: rgb(43, 42, 42);
+    width: 100%;
+    height: auto;
 }
+.orange-highlights{
+    color: #FD7272;
+}
+
+
+.wellcome-animation{
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 60px;
+    font-weight: 600;
+    color: #fa7000;
+    animation-name:welcome ;
+    animation-iteration-count: infinite;
+    
+
+}
+@keyframes welcome {
+    0%, 100% {
+      transform: translateX(-100%);
+      color: rgb(252, 188, 68);
+    }
+    50% {
+      transform: translateX(100%);
+      color: red;
+    }
+  }
+    .wellcome-animation {
+      display: inline-block;
+      white-space: nowrap;
+      overflow: hidden;
+      animation: welcome 15s linear infinite;
+    }
+
 .name-highlights{
     color: orange;
     animation-name:title ;
@@ -42,6 +78,7 @@ p{
 
 .half-width{
     width: 40%;
+    height: auto;
     float: left;
     margin-left: 5%;
     padding-left: 2%;
@@ -49,6 +86,7 @@ p{
 }
 .half-width img{
     width: 50%;
+    height: auto;
     padding-left: 40%;
     padding-top: 5%;
     padding-right: 10%;
@@ -66,6 +104,8 @@ section{
     padding-bottom: 2%;   
 }
 .link-button{
+    width: 100%;
+    height: auto;
     text-decoration: none;
     font-size: 20px;
     background-image: linear-gradient(lightsalmon, tomato);
@@ -79,8 +119,62 @@ section{
     size: 49px;
 }
 
+#exp{
+    color: #fa2f2f;
+    padding-left: 6.8%;
+
+        background-image: url(images/exp-bg.png);
+        background-repeat: no-repeat;
+        position: left ;
+       
+    
+    
+}
 .dream-area{
     background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
     background-position: right;
+}
+.singel-experience{
+    box-shadow: 10px 10px 40px gray;
+    border-radius: 2%;
+    height: 70%;
+}
+#full-stack{
+    border-left: solid 6px;
+    border-image: linear-gradient(180deg, rgb(162, 249, 111), rgb(5, 117, 22)) ;
+    border-image-slice: 1;
+}
+
+#baby-web{
+    border-left: solid 6px;
+    border-image: linear-gradient(180deg, rgb(111, 249, 235), rgb(0, 174, 205)) ;
+    border-image-slice: 1;
+}
+#footer{
+    text-align: center;
+    font-size: 12px;
+}
+.last{
+    background-color:#113f67;
+    padding-left: 2%;
+    color: white;
+    width: 100%;
+    height: 80%;
+    font-weight: 600px;
+}
+
+
+
+#contact{
+    text-align: center;
+    color: white;
+    font-size: 26px;
+    font-weight: 900px;
+}
+.logo{
+    border: solid white 1px;
+    border-radius: 1%;
+    height: 25px;
+    width: 25px;
 }
